# Haskell-Programming-from-First-Principles

./: Ch02_Learn.hs  Ch03_String.hs  Ch07_More_Functional_Patterns.hs  Ch09 Lists  Ch09_Lists.hs  Ch10_Folding_lists.hs  Ch11_Algebraic_Data_Types.hs  Ch11_As-patterns.hs  Ch11_Binary_Trees.hs  Ch11_Ciphers.hs  Ch11_Construction_and_Deconstructing_Values.hs  Ch12_Signaling_adversity.hs  Ch13_Invalid_Person.hs  Ch13_Palindrome.hs  FunctionWithLet.hs  FunctionWithWhere.hs  Reverse.hs
BartosMilewski/: applicative_Functor_Moving_Average.hs
Ch13_Hangman_Game/: ChangeLog.md  LICENSE  hangmanF.cabal
Ch13_Hangman_Game/src/: Main.hs
Ch13_Hello-haskell2/: ChangeLog.md  Hello-haskell.cabal  LICENSE
Ch13_Hello-haskell2/src/: Main.hs
Ch13_call-em-up/: ChangeLog.md  Main.hs  call-em-up.cabal
Ch14_Addition/addition/: Addition.hs  addition.cabal
Ch14_Exercises_UsingQuickCheck/using-quickcheck/: using-quickcheck.cabal
Ch14_Exercises_UsingQuickCheck/using-quickcheck/src/: Main.hs
Ch14_Morse/morse/: morse.cabal
Ch14_Morse/morse/src/: Main.hs  Morse.hs
Ch14_Morse/morse/test/: tests.hs
Ch15_Monoid_Semigroup/: madness-exercise.hs  optional-monoid-exercise.hs
Ch15_Monoid_Semigroup/exercises/: exercises.cabal
Ch15_Monoid_Semigroup/exercises/app/: Main.hs
Ch15_Monoid_Semigroup/semigroup-exercises/: semigroup-exercises.cabal
Ch15_Monoid_Semigroup/semigroup-exercises/src/: Main.hs
Ch16_Functor/instances-of-func/: instances-of-func.cabal
Ch16_Functor/instances-of-func/src/: Main.hs
Ch17_Applicative/exercises/: exercises.cabal
Ch17_Applicative/exercises/src/: Main.hs
Ch18_Monad/: Ch18_Monad.hs
Ch19_Monads_Gone_Wild/shawty/: shawty.cabal
Ch19_Monads_Gone_Wild/shawty/src/: Main.hs
Ch20_Foldable/: exercises.hs
Hello-haskell/: Hello-haskell.cabal
proba/: proba.cabal
