name:                morse
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/szalmaf/morse#readme
license:             BSD3
license-file:        LICENSE
author:              Ferenc Szalma
maintainer:          szalmaf@gmail.com
copyright:           2016 Ferenc Szalma
category:            Practice
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-tabs
  exposed-modules:     Morse
  build-depends:       base >= 4.7 && < 5
                    ,  containers
                    ,  QuickCheck
  default-language:    Haskell2010

executable morse
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , morse
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:       base
                     , containers
                     , morse
                     , QuickCheck
  ghc-options:         -Wall -fwarn-orphans
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/morse
