name:                exercises
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/exercises#readme
license:             BSD3
license-file:        LICENSE
author:              Ferenc Szalma
maintainer:          example@example.com
copyright:           2017 Ferenc Szalma
category:            Haskell exercises
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

-- library
--   hs-source-dirs:      src
--   ghc-options:         -Wall -fwarn-tabs
--   exposed-modules:     BadMonoid
--   build-depends:       base >= 4.7 && < 5
--                     ,  containers
--                     ,  QuickCheck
--   default-language:    Haskell2010

executable exercises
  hs-source-dirs:      src
  main-is:             BadMonoid.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  QuickCheck
                    -- ,  QuickCheck.Checkers



